--- a/WTF_DICOM/WTF_DICOM.csproj
+++ b/WTF_DICOM/WTF_DICOM.csproj
@@ -43,6 +43,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Syncfusion.Licensing" />
+    <PackageReference Include="Syncfusion.Shared.WPF" />
   </ItemGroup>
 
   <ItemGroup>
