added stacked header and title to TagsAndValues Data

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -24,14 +24,19 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageVersion>
-    <PackageVersion Include="fo-dicom" Version="5.2.4" />
+    <PackageVersion Include="fo-dicom" Version="5.2.5" />
     <PackageVersion Include="MaterialDesignThemes" Version="5.3.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="Moq.AutoMock" Version="3.5.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageVersion Include="Syncfusion.Grid.WPF" Version="31.2.15" />
+    <PackageVersion Include="Syncfusion.Licensing" Version="31.2.15" />
+    <PackageVersion Include="Syncfusion.SfGrid.WPF" Version="31.2.15" />
+    <PackageVersion Include="Syncfusion.Shared.WPF" Version="31.2.15" />
+    <PackageVersion Include="Syncfusion.Tools.WPF" Version="31.2.15" />
     <PackageVersion Include="System.Text.Json" Version="9.0.5" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5">
